--- a/P1.ipynb
+++ b/P1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -34,72 +34,8 @@
     "import matplotlib.image as mpimg\n",
     "import numpy as np\n",
     "import cv2\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Read in an Image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This image is: <class 'numpy.ndarray'> with dimensions: (540, 960, 3)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x20ed3ca5160>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#reading in an image\n",
-    "image = mpimg.imread('test_images/solidWhiteRight.jpg')\n",
-    "\n",
-    "#printing out some stats and plotting\n",
-    "print('This image is:', type(image), 'with dimensions:', image.shape)\n",
-    "plt.imshow(image)  # if you wanted to show a single color channel image called 'gray', for example, call as plt.imshow(gray, cmap='gray')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Ideas for Lane Detection Pipeline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Some OpenCV functions (beyond those introduced in the lesson) that might be useful for this project are:**\n",
-    "\n",
-    "`cv2.inRange()` for color selection  \n",
-    "`cv2.fillPoly()` for regions selection  \n",
-    "`cv2.line()` to draw lines on an image given endpoints  \n",
-    "`cv2.addWeighted()` to coadd / overlay two images\n",
-    "`cv2.cvtColor()` to grayscale or change color\n",
-    "`cv2.imwrite()` to output images to file  \n",
-    "`cv2.bitwise_and()` to apply a mask to an image\n",
-    "\n",
-    "**Check out the OpenCV documentation to learn about these and discover even more awesome functionality!**"
+    "%matplotlib inline\n",
+    "import math\n"
    ]
   },
   {
@@ -124,7 +60,6 @@
    },
    "outputs": [],
    "source": [
-    "import math\n",
     "\n",
     "def grayscale(img):\n",
     "    \"\"\"Applies the Grayscale transform\n",
@@ -229,12 +164,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find the line main function\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detect_lines_on_road(img):\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['solidWhiteCurve.jpg',\n 'solidWhiteRight.jpg',\n 'solidYellowCurve.jpg',\n 'solidYellowCurve2.jpg',\n 'solidYellowLeft.jpg',\n 'whiteCarLaneSwitch.jpg']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "os.listdir(\"test_images/\")"
@@ -244,8 +209,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build a Lane Finding Pipeline\n",
-    "\n"
+    "## Read in an Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This image is: <class 'numpy.ndarray'> with dimensions: (540, 960, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x20ed4133e80>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#reading in an image\n",
+    "image = mpimg.imread('test_images/solidWhiteRight.jpg')\n",
+    "\n",
+    "#printing out some stats and plotting\n",
+    "print('This image is:', type(image), 'with dimensions:', image.shape)\n",
+    "plt.imshow(image)  # if you wanted to show a single color channel image called 'gray', for example, call as plt.imshow(gray, cmap='gray')"
    ]
   },
   {
