--- a/P1.ipynb
+++ b/P1.ipynb
@@ -34,8 +34,9 @@
     "import matplotlib.image as mpimg\n",
     "import numpy as np\n",
     "import cv2\n",
+    "import os\n",
     "%matplotlib inline\n",
-    "import math\n"
+    "import math"
    ]
   },
   {
@@ -49,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below are some helper functions to help get you started. They should look familiar from the lesson!"
+    "Below are some helper functions to detect the lines on the road"
    ]
   },
   {
@@ -60,7 +61,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "def grayscale(img):\n",
     "    \"\"\"Applies the Grayscale transform\n",
     "    This will return an image with only one color channel\n",
@@ -157,18 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test Images\n",
-    "\n",
-    "Build your pipeline to work on the images in the directory \"test_images\"  \n",
-    "**You should make sure your pipeline works well on these images before you try the videos.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Find the line main function\n",
-    "\n"
+    "## Main function to detect the left and right line on the road."
    ]
   },
   {
@@ -177,9 +166,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def detect_lines_on_road(img):\n",
-    "    \n",
-    "    "
+    "def detect_lines_on_road(image,kernel_size = 5, low_threshold = 50, high_threshold = 150, rho = 2, threshold = 40, min_line_length = 50, max_line_gap = 30):\n",
+    "\n",
+    "    # Convert to Gray scale\n",
+    "    gray = grayscale(image)\n",
+    "    # Define a kernel size and apply Gaussian smoothing\n",
+    "    blur_gray = gaussian_blur(gray, kernel_size)\n",
+    "\n",
+    "    # Define our parameters for Canny and apply\n",
+    "    edges = canny(blur_gray, low_threshold, high_threshold)\n",
+    "    # Next we'll create a masked edges image using cv2.fillPoly()\n",
+    "    mask = np.zeros_like(edges)\n",
+    "    ignore_mask_color = 255\n",
+    "\n",
+    "    # This time we are defining a four sided polygon to mask\n",
+    "    imshape = image.shape\n",
+    "    vertices = np.array([[(0, imshape[0]), (450, 320), (490, 290), (imshape[1], imshape[0])]], dtype=np.int32)\n",
+    "    cv2.fillPoly(mask, vertices, ignore_mask_color)\n",
+    "    masked_edges = cv2.bitwise_and(edges, mask)\n",
+    "\n",
+    "    # Define the Hough transform parameters\n",
+    "    # Make a blank the same size as our image to draw on\n",
+    "\n",
+    "    theta = (np.pi / 180)  # angular resolution in radians of the Hough grid\n",
+    "    line_image = np.copy(image) * 0  # creating a blank to draw lines on\n",
+    "\n",
+    "    # Run Hough on edge detected image\n",
+    "    # Output \"lines\" is an array containing endpoints of detected line segments\n",
+    "    hough_image, lines = hough_lines_road(masked_edges, rho, theta, threshold, min_line_length, max_line_gap)\n",
+    "\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    # Draw the lines on the edge image\n",
+    "    lines_edges = weighted_img(hough_image, image, 0.9, 1., 0.)\n",
+    "\n",
+    "    return lines_edges\n",
+    "# --------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Images\n",
+    "\n",
+    "This cell execute the method to detect the lines on the road in the images. "
    ]
   },
   {
@@ -201,8 +231,43 @@
     }
    ],
    "source": [
-    "import os\n",
-    "os.listdir(\"test_images/\")"
+    "\n",
+    "# --------------------------------------------------------------------------------\n",
+    "# Read the images in the folder test_image.\n",
+    "image_list = os.listdir(\"test_images/\")\n",
+    "# --------------------------------------------------------------------------------\n",
+    "# Set the parameters to detect the lines.\n",
+    "# --------------------------------------------------------------------------------\n",
+    "kernel_size = 5 #Gaussina kernel size\n",
+    "low_threshold = 50 # low thr in the canny method\n",
+    "high_threshold = 150 # high thr in canny method\n",
+    "rho = 2  # distance resolution in pixels of the Hough grid\n",
+    "threshold = 40  # minimum number of votes (intersections in Hough grid cell)\n",
+    "min_line_length = 50  # minimum number of pixels making up a line\n",
+    "max_line_gap = 30  # maximum gap in pixels between connectable line segments\n",
+    "# --------------------------------------------------------------------------------\n",
+    "\n",
+    "# --------------------------------------------------------------------------------\n",
+    "# Loop to process all the images.\n",
+    "# --------------------------------------------------------------------------------\n",
+    "for i in range(len(image_list)):\n",
+    "\n",
+    "    print('Image:', image_list[i])  # reading in an image\n",
+    "    image = mpimg.imread('test_images/' + image_list[i])\n",
+    "    image_lines = detect_lines_on_road(image, kernel_size, low_threshold, high_threshold, rho, threshold,\n",
+    "                                       min_line_length, max_line_gap)\n",
+    "\n",
+    "    cv2.imshow('Lane Detection', image_lines)\n",
+    "    cv2.waitKey(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
    ]
   },
   {
