Added angle filtering of the detected line

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -61,6 +61,7 @@
    },
    "outputs": [],
    "source": [
+    "# --------------------------------------------------------------------------------\n",
     "def grayscale(img):\n",
     "    \"\"\"Applies the Grayscale transform\n",
     "    This will return an image with only one color channel\n",
@@ -70,83 +71,224 @@
     "    return cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
     "    # Or use BGR2GRAY if you read an image with cv2.imread()\n",
     "    # return cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-    "    \n",
+    "\n",
+    "# --------------------------------------------------------------------------------\n",
     "def canny(img, low_threshold, high_threshold):\n",
     "    \"\"\"Applies the Canny transform\"\"\"\n",
     "    return cv2.Canny(img, low_threshold, high_threshold)\n",
-    "\n",
+    "# --------------------------------------------------------------------------------\n",
     "def gaussian_blur(img, kernel_size):\n",
     "    \"\"\"Applies a Gaussian Noise kernel\"\"\"\n",
     "    return cv2.GaussianBlur(img, (kernel_size, kernel_size), 0)\n",
-    "\n",
+    "# --------------------------------------------------------------------------------\n",
     "def region_of_interest(img, vertices):\n",
     "    \"\"\"\n",
     "    Applies an image mask.\n",
-    "    \n",
+    "\n",
     "    Only keeps the region of the image defined by the polygon\n",
     "    formed from `vertices`. The rest of the image is set to black.\n",
     "    \"\"\"\n",
-    "    #defining a blank mask to start with\n",
-    "    mask = np.zeros_like(img)   \n",
-    "    \n",
-    "    #defining a 3 channel or 1 channel color to fill the mask with depending on the input image\n",
+    "    # defining a blank mask to start with\n",
+    "    mask = np.zeros_like(img)\n",
+    "\n",
+    "    # defining a 3 channel or 1 channel color to fill the mask with depending on the input image\n",
     "    if len(img.shape) > 2:\n",
     "        channel_count = img.shape[2]  # i.e. 3 or 4 depending on your image\n",
     "        ignore_mask_color = (255,) * channel_count\n",
     "    else:\n",
     "        ignore_mask_color = 255\n",
-    "        \n",
-    "    #filling pixels inside the polygon defined by \"vertices\" with the fill color    \n",
+    "\n",
+    "    # filling pixels inside the polygon defined by \"vertices\" with the fill color\n",
     "    cv2.fillPoly(mask, vertices, ignore_mask_color)\n",
-    "    \n",
-    "    #returning the image only where mask pixels are nonzero\n",
+    "\n",
+    "    # returning the image only where mask pixels are nonzero\n",
     "    masked_image = cv2.bitwise_and(img, mask)\n",
     "    return masked_image\n",
-    "\n",
-    "\n",
-    "def draw_lines(img, lines, color=[255, 0, 0], thickness=2):\n",
+    "# --------------------------------------------------------------------------------\n",
+    "def draw_lines(img, lines, color=[255, 0, 0], thickness=16):\n",
     "    \"\"\"\n",
-    "    NOTE: this is the function you might want to use as a starting point once you want to \n",
+    "    NOTE: this is the function you might want to use as a starting point once you want to\n",
     "    average/extrapolate the line segments you detect to map out the full\n",
     "    extent of the lane (going from the result shown in raw-lines-example.mp4\n",
-    "    to that shown in P1_example.mp4).  \n",
-    "    \n",
-    "    Think about things like separating line segments by their \n",
+    "    to that shown in P1_example.mp4).\n",
+    "\n",
+    "    Think about things like separating line segments by their\n",
     "    slope ((y2-y1)/(x2-x1)) to decide which segments are part of the left\n",
-    "    line vs. the right line.  Then, you can average the position of each of \n",
+    "    line vs. the right line.  Then, you can average the position of each of\n",
     "    the lines and extrapolate to the top and bottom of the lane.\n",
-    "    \n",
-    "    This function draws `lines` with `color` and `thickness`.    \n",
+    "\n",
+    "    This function draws `lines` with `color` and `thickness`.\n",
     "    Lines are drawn on the image inplace (mutates the image).\n",
     "    If you want to make the lines semi-transparent, think about combining\n",
     "    this function with the weighted_img() function below\n",
     "    \"\"\"\n",
     "    for line in lines:\n",
-    "        for x1,y1,x2,y2 in line:\n",
+    "        for x1, y1, x2, y2 in line:\n",
     "            cv2.line(img, (x1, y1), (x2, y2), color, thickness)\n",
-    "\n",
+    "# --------------------------------------------------------------------------------\n",
     "def hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap):\n",
     "    \"\"\"\n",
     "    `img` should be the output of a Canny transform.\n",
-    "        \n",
+    "\n",
     "    Returns an image with hough lines drawn.\n",
     "    \"\"\"\n",
-    "    lines = cv2.HoughLinesP(img, rho, theta, threshold, np.array([]), minLineLength=min_line_len, maxLineGap=max_line_gap)\n",
+    "    lines = cv2.HoughLinesP(img, rho, theta, threshold, np.array([]), minLineLength=min_line_len,\n",
+    "                            maxLineGap=max_line_gap)\n",
+    "    return lines\n",
+    "# --------------------------------------------------------------------------------\n",
+    "def get_scores(image, lines, num_lines,lines_equations,min_y):\n",
+    "\n",
+    "    score = np.zeros(len(lines))\n",
+    "    new_coordinates = np.zeros(2)\n",
+    "\n",
+    "    for i in range(num_lines):\n",
+    "        equation = lines_equations[i]\n",
+    "        score[i] = 0\n",
+    "        if equation[0] != 0 and math.isinf(equation[0]) == False and math.isinf(equation[1]) == False:\n",
+    "            for y in range(min_y, image.shape[1], 1):\n",
+    "\n",
+    "                if equation[0] == 0:\n",
+    "                    new_coordinates[0] = equation[1]\n",
+    "                else:\n",
+    "                    new_coordinates[0] = int(round((y - equation[1]) / (equation[0]+0.0001)))\n",
+    "                new_coordinates[1] = int(round(y))\n",
+    "                for x in range(-5, 5, 1):\n",
+    "                    y_ = int(new_coordinates[1])\n",
+    "                    x_ = int(new_coordinates[0] + x)\n",
+    "                    if x_ > 0 and x_< image.shape[1] and y_ > 0 and y_< image.shape[0]:\n",
+    "                        if image[y_, x_] > 0:\n",
+    "                            score[i] = score[i] + 1\n",
+    "\n",
+    "    return score\n",
+    "# --------------------------------------------------------------------------------\n",
+    "def get_line_equation(line):\n",
+    "\n",
+    "    line_equation = np.zeros(2)\n",
+    "\n",
+    "    xA = line[0, 0]\n",
+    "    yA = line[0, 1]\n",
+    "    xB = line[0, 2]\n",
+    "    yB = line[0, 3]\n",
+    "    line_equation[0] = (yA - yB)/(xA - xB) # Slope\n",
+    "    if line_equation[0] == 0:\n",
+    "        pp = 0\n",
+    "\n",
+    "\n",
+    "    line_equation[1] = yA - line_equation[0]*xA #Bias\n",
+    "    return line_equation\n",
+    "# --------------------------------------------------------------------------------\n",
+    "def new_coordinate_line(image,line_equation,min_y):\n",
+    "\n",
+    "    new_coordinates = np.zeros(4)\n",
+    "\n",
+    "    if line_equation[0] == 0:\n",
+    "        new_coordinates[0] = line_equation[1]\n",
+    "    else:\n",
+    "        new_coordinates[0] = (min_y - line_equation[1]) / (line_equation[0]+0.0001)\n",
+    "\n",
+    "    new_coordinates[1] = min_y\n",
+    "\n",
+    "    if line_equation[0] == 0:\n",
+    "        new_coordinates[0] = line_equation[1]\n",
+    "    else:\n",
+    "        new_coordinates[2] = (image.shape[1] - line_equation[1]) / (line_equation[0]+0.0001)\n",
+    "    new_coordinates[3] = image.shape[1]\n",
+    "\n",
+    "    return new_coordinates\n",
+    "# --------------------------------------------------------------------------------\n",
+    "def get_best_line_score(lines,num_lines,score):\n",
+    "\n",
+    "    best_score_idx = -1\n",
+    "    best_score = -1\n",
+    "\n",
+    "    for i in range(num_lines):\n",
+    "        if score[i]>best_score:\n",
+    "            best_score = score[i]\n",
+    "            best_score_idx = i\n",
+    "\n",
+    "    return lines[best_score_idx], best_score_idx\n",
+    "# --------------------------------------------------------------------------------\n",
+    "def detect_left_right_line(img,lines):\n",
+    "\n",
+    "    min_y = int(img.shape[1]/3)\n",
+    "    l_r_lines = np.zeros([1,2, 4])\n",
+    "    l_r_lines = l_r_lines.astype(int)\n",
+    "\n",
+    "    left_score = np.zeros(len(lines))\n",
+    "    right_score = np.zeros(len(lines))\n",
+    "    left_candidates = np.copy(lines)*0\n",
+    "    num_left_candidates = 0\n",
+    "    right_candidates = np.copy(lines)*0\n",
+    "    num_right_candidates = 0\n",
+    "\n",
+    "    left_line_equation = np.zeros([len(lines), 2])\n",
+    "    right_line_equation = np.zeros([len(lines), 2])\n",
+    "\n",
+    "    # Get the center of the image, in the proper way it should be the Y vehicle coordinates respect to the camera\n",
+    "    center_x = (img.shape[1])/2\n",
+    "\n",
+    "    for i in range(len(lines)):\n",
+    "        line = lines[i]\n",
+    "\n",
+    "        x_coordinate = 0\n",
+    "\n",
+    "        if line[0, 1] > line[0, 3]:\n",
+    "            x_coordinate = line[0, 0]\n",
+    "        else:\n",
+    "            x_coordinate = line[0, 2]\n",
+    "\n",
+    "        if x_coordinate >= center_x:\n",
+    "            line_equation = get_line_equation(line)\n",
+    "            right_line_equation[num_right_candidates] = line_equation\n",
+    "\n",
+    "            right_candidates[num_right_candidates] = lines[i]\n",
+    "            #\n",
+    "\n",
+    "            num_right_candidates = num_right_candidates+1\n",
+    "        else:\n",
+    "            line_equation = get_line_equation(line)\n",
+    "            left_line_equation[num_left_candidates] = line_equation\n",
+    "\n",
+    "            left_candidates[num_left_candidates] = lines[i]\n",
+    "\n",
+    "            #left_candidates[num_left_candidates] = new_coordinate_line(img, line_equation, min_y)\n",
+    "\n",
+    "            num_left_candidates = num_left_candidates + 1\n",
+    "\n",
+    "    left_score = get_scores(img, left_candidates, num_left_candidates-1, left_line_equation, min_y)\n",
+    "    right_score = get_scores(img, right_candidates, num_right_candidates-1, right_line_equation, min_y)\n",
+    "\n",
+    "    l_r_lines[0, 0], best_score_left = get_best_line_score(left_candidates, num_left_candidates-1, left_score)\n",
+    "    l_r_lines[0, 1], best_score_right = get_best_line_score(right_candidates, num_right_candidates-1, right_score)\n",
+    "\n",
+    "    l_r_lines[0, 0] = new_coordinate_line(img, left_line_equation[best_score_left], min_y)\n",
+    "    l_r_lines[0, 1] = new_coordinate_line(img, right_line_equation[best_score_right], min_y)\n",
+    "\n",
+    "    return l_r_lines\n",
+    "# --------------------------------------------------------------------------------\n",
+    "def hough_lines_road(img, rho, theta, threshold, min_line_len, max_line_gap):\n",
+    "    \"\"\"\n",
+    "    `img` should be the output of a Canny transform.\n",
+    "\n",
+    "    Returns an image with hough lines drawn.\n",
+    "    \"\"\"\n",
+    "    lines = hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap)\n",
+    "\n",
+    "    l_r_lines = detect_left_right_line(img, lines)\n",
+    "\n",
     "    line_img = np.zeros((img.shape[0], img.shape[1], 3), dtype=np.uint8)\n",
-    "    draw_lines(line_img, lines)\n",
-    "    return line_img\n",
-    "\n",
-    "# Python 3 has support for cool math symbols.\n",
-    "\n",
+    "    draw_lines(line_img, l_r_lines)\n",
+    "    return line_img, l_r_lines\n",
+    "# --------------------------------------------------------------------------------\n",
     "def weighted_img(img, initial_img, α=0.8, β=1., λ=0.):\n",
     "    \"\"\"\n",
     "    `img` is the output of the hough_lines(), An image with lines drawn on it.\n",
     "    Should be a blank image (all black) with lines drawn on it.\n",
-    "    \n",
+    "\n",
     "    `initial_img` should be the image before any processing.\n",
-    "    \n",
+    "\n",
     "    The result image is computed as follows:\n",
-    "    \n",
+    "\n",
     "    initial_img * α + img * β + λ\n",
     "    NOTE: initial_img and img must be the same shape!\n",
     "    \"\"\"\n",
@@ -195,7 +337,7 @@
     "    # Output \"lines\" is an array containing endpoints of detected line segments\n",
     "    hough_image, lines = hough_lines_road(masked_edges, rho, theta, threshold, min_line_length, max_line_gap)\n",
     "\n",
-    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    #image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "    # Draw the lines on the edge image\n",
     "    lines_edges = weighted_img(hough_image, image, 0.9, 1., 0.)\n",
     "\n",
@@ -256,9 +398,10 @@
     "    image = mpimg.imread('test_images/' + image_list[i])\n",
     "    image_lines = detect_lines_on_road(image, kernel_size, low_threshold, high_threshold, rho, threshold,\n",
     "                                       min_line_length, max_line_gap)\n",
-    "\n",
-    "    cv2.imshow('Lane Detection', image_lines)\n",
-    "    cv2.waitKey(0)\n"
+    "    plt.imshow(image_lines)\n",
+    "    plt.show()\n",
+    "    #cv2.imshow('Lane Detection', image_lines)\n",
+    "    #cv2.waitKey(0)\n"
    ]
   },
   {
