updated the writeup and added the output from the algorithm

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -457,8 +457,8 @@
     "for i in range(len(video_list)):\n",
     "\n",
     "    imio.plugins.ffmpeg.download()\n",
-    "    white_output = 'test_videos_output/' + video_list[i]\n",
-    "    clip1 = VideoFileClip('test_videos/' + video_list[i])\n",
+    "    white_output = './test_videos_output/' + video_list[1]\n",
+    "    clip1 = VideoFileClip('./test_videos/' + video_list[1])\n",
     "    white_clip = clip1.fl_image(detect_lines_on_road) #NOTE: this function expects color images!!\n",
     "    white_clip.write_videofile(white_output, audio=False)\n",
     "\n",
@@ -466,7 +466,13 @@
     "    <video width=\"960\" height=\"540\" controls>\n",
     "    <source src=\"{0}\">\n",
     "    </video>\n",
-    "    \"\"\".format(white_output))"
+    "    \"\"\".format(white_output))\n",
+    "    \n",
+    "HTML(\"\"\"\n",
+    "<video width=\"960\" height=\"540\" controls>\n",
+    "  <source src=\"{0}\">\n",
+    "</video>\n",
+    "\"\"\".format(challenge_output))"
    ]
   }
  ],
