updated the video output

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -464,15 +464,9 @@
     "\n",
     "    HTML(\"\"\"\n",
     "    <video width=\"960\" height=\"540\" controls>\n",
-    "    <source src=\"{0}\">\n",
+    "    <source src=\"{white_output}\">\n",
     "    </video>\n",
-    "    \"\"\".format(white_output))\n",
-    "    \n",
-    "HTML(\"\"\"\n",
-    "<video width=\"960\" height=\"540\" controls>\n",
-    "  <source src=\"{0}\">\n",
-    "</video>\n",
-    "\"\"\".format(challenge_output))"
+    "    \"\"\".format(white_output))"
    ]
   }
  ],
