updated the video output

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -461,12 +461,21 @@
     "    clip1 = VideoFileClip('./test_videos/' + video_list[i])\n",
     "    white_clip = clip1.fl_image(detect_lines_on_road) #NOTE: this function expects color images!!\n",
     "    white_clip.write_videofile(white_output, audio=False)\n",
-    "\n",
+    "    \n",
     "    HTML(\"\"\"\n",
     "    <video width=\"960\" height=\"540\" controls>\n",
-    "    <source src=\"{white_output}\">\n",
+    "    <source src=\"{0}\">\n",
     "    </video>\n",
     "    \"\"\".format(white_output))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
    ]
   }
  ],
